k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainerpro-ui
  labels:
    app: trainerpro-ui
    version: v1
  namespace: trainerpro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trainerpro-ui
  template:
    metadata:
      labels:
        app: trainerpro-ui
        version: v1
    spec:
      containers:
      - name: trainerpro-ui
        image: 192.168.0.170:5000/trainerpro-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainerpro-backend
  labels:
    app: trainerpro-backend
    version: v1
  namespace: trainerpro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trainerpro-backend
  template:
    metadata:
      labels:
        app: trainerpro-backend
        version: v1
    spec:
      containers:
        - name: trainerpro-backend
          image: 192.168.0.170:5000/trenerapro-api
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: trainerpro-ui-service
  namespace: trainerpro
spec:
  selector:
    app: trainerpro-ui
  type: ClusterIP
  ports:
    - name: http
      port: 4200
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trainerpro-backend-service
  namespace: trainerpro
spec:
  selector:
    app: trainerpro-backend
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trainerpro-ingress
  namespace: trainerpro
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web,
    traefik.ingress.kubernetes.io/router.middlewares: ""
spec:
  ingressClassName: traefik
  rules:
    - host: trainerpro.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: trainerpro-backend-service
                port:
                  number: 8000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: trainerpro-backend-service
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: trainerpro-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trainerpro-ui-service
                port:
                  number: 4200
